# codex

./: .codespellignore  .git-catchup-latest-ref  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  TODO  cliff.toml  graphify-out  justfile  test-bisect.sh  user.bazelrc
.codex/: hooks.json
.codex/rules/: default.rules
.github/workflows/: bazel.yml  ci.yml  custom-codex-release.yml  rust-ci-full.yml  rust-ci.yml  rusty-v8-bazel-build.yml  sdk.yml  v8-canary.yml
codex-cli/: package.json
codex-cli/scripts/: README.md  build_npm_package.py
codex-rs/: .gitignore  Cargo.toml  README.md
codex-rs/.cargo/: config.toml
codex-rs/ansi-escape/: Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/arg0/: Cargo.toml
codex-rs/v8-poc/: BUILD.bazel  Cargo.toml
codex-rs/v8-poc/src/: smoke_test.rs
docs/: account-usage.md  config.md  downstream-feature-inventory.md  install.md  mempalace-tool-guide.md  survival-mode-turn-lifecycle.md  telegram-oauth-bot.md  turn-lifecycle.md
graphify-out/: graphify-out
patches/: v8_custom_archive_out_dir.patch
scripts/: build_armv7.sh  ci_triage.sh  delete_codex_thread.sh  extract_model_instructions.py  install_codex.sh  local_armv7_gate.sh  plot_usage_log.py  publish_npm_local.sh  rebuild_codex.sh  rebuild_codex_and_show_versions.sh  rebuild_model_instructions.py  render_prompt_captures.sh  render_rollout_logs.py  run_telegram_oauth_bot.sh  telegram_oauth_bot.py  test-bisect.sh  test-remote-env.sh  update_model_pricing.py
(+388 files in other folders)
